# CrateBay

./: .gitignore  AGENTS.md  CHANGELOG.md  CHANGELOG.zh.md  Cargo.toml  README.md  README.zh.md
.githooks/: post-commit  pre-commit
.github/workflows/: ci.yml  release.yml
crates/cargobay-cli/: Cargo.toml
crates/cargobay-cli/src/: main.rs
crates/cargobay-core/src/: hypervisor.rs  images.rs  k3s.rs  lib.rs  linux.rs  macos.rs  plugin.rs  store.rs  validation.rs  windows.rs
crates/cargobay-daemon/: Cargo.toml
crates/cargobay-daemon/src/: service.rs
crates/cargobay-gui/: package-lock.json  package.json
crates/cargobay-gui/src/: App.css  App.tsx  icons.tsx  types.ts
crates/cargobay-gui/src-tauri/: Cargo.toml  tauri.conf.json
crates/cargobay-gui/src-tauri/src/: lib.rs
crates/cargobay-gui/src/components/: ErrorDisplay.tsx  StatsBar.tsx  UpdateChecker.tsx
crates/cargobay-gui/src/hooks/: useContainers.ts  useImageSearch.ts  useToast.ts  useVms.ts
crates/cargobay-gui/src/i18n/: messages.ts
crates/cargobay-gui/src/pages/: Containers.tsx  Dashboard.tsx  Images.tsx  Settings.tsx  Vms.tsx
crates/cargobay-vz/: Cargo.toml  build.rs
crates/cargobay-vz/src/: ffi.rs  main.rs
crates/cratebay-cli/: Cargo.toml
crates/cratebay-cli/src/: main.rs
crates/cratebay-core/: Cargo.toml  build.rs
crates/cratebay-core/benches/: startup.rs
crates/cratebay-core/src/: docker_auth.rs  fsutil.rs  hypervisor.rs  images.rs  k3s.rs  lib.rs  linux.rs  logging.rs  macos.rs  plugin.rs  portfwd.rs  runtime.rs  store.rs  vm.rs  windows.rs
crates/cratebay-core/tests/: integration.rs
crates/cratebay-daemon/: Cargo.toml
crates/cratebay-daemon/src/: main.rs  service.rs
crates/cratebay-daemon/tests/: grpc_smoke.rs
crates/cratebay-guest-agent/src/: main.rs
crates/cratebay-gui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
crates/cratebay-gui/scripts/: check-i18n.mjs
crates/cratebay-gui/src/: App.css  App.tsx  icons.tsx  index.css  main.tsx  types.ts
crates/cratebay-gui/src-tauri/: Cargo.toml  tauri.conf.json
crates/cratebay-gui/src-tauri/capabilities/: default.json
crates/cratebay-gui/src-tauri/icons/: icon.icns
crates/cratebay-gui/src-tauri/src/: lib.rs  main.rs
crates/cratebay-gui/src-tauri/src/sandbox/: exec.rs
crates/cratebay-gui/src-tauri/tests/: desktop_smoke.rs
crates/cratebay-gui/src/components/: AppModal.tsx  CustomSelect.tsx  EmptyState.tsx  ErrorDisplay.tsx  UpdateChecker.tsx
crates/cratebay-gui/src/components/ui/: button.tsx  card.tsx  input.tsx
crates/cratebay-gui/src/hooks/: useContainers.ts  useModal.ts  useVms.ts  useVolumes.ts
crates/cratebay-gui/src/hooks/__tests__/: useVolumes.test.tsx
crates/cratebay-gui/src/i18n/: messages.ts
crates/cratebay-gui/src/lib/: appVersion.ts  styles.ts
crates/cratebay-gui/src/pages/: AiHub.tsx  Assistant.tsx  Containers.tsx  Dashboard.tsx  Images.tsx  Kubernetes.tsx  Settings.tsx  Vms.tsx  Volumes.tsx
crates/cratebay-gui/src/pages/__tests__/: AiHub.test.tsx  Assistant.test.tsx  Containers.test.tsx  Dashboard.test.tsx  Images.test.tsx  Settings.ai.test.tsx
crates/cratebay-gui/src/test/: setup.ts
crates/cratebay-gui/src/test/mocks/: tauri.ts
crates/cratebay-mcp/: Cargo.toml
crates/cratebay-mcp/src/: main.rs
crates/cratebay-vz/: Cargo.toml  build.rs
crates/cratebay-vz/bridge/: VZBridge.h  VZBridge.swift
crates/cratebay-vz/src/: ffi.rs  main.rs
docs/: AI_SKILLS.md  ARCHITECTURE.en.md  ARCHITECTURE.md  DESIGN_SYSTEM.md  MCP_SERVER.md  MCP_SERVER.zh.md  RELEASE_SMOKE_CHECKLIST.md  ROADMAP.md  TUTORIAL.md  TUTORIAL.zh.md  VISION.md  VISION.zh.md
proto/: cargobay.proto  cratebay.proto
scripts/: bench-perf.sh  build-release-macos.sh  ci-local.sh  cratebay-mcp-smoke.sh  release-readiness.sh  run-desktop-e2e-linux.sh  setup-ai.sh  setup-dev.sh
tools/opensandbox/: README.md  sandbox.example.toml
website/: CNAME  index.html  script.js  style.css
