[workspace]
resolver = "2"
members = [
    "crates/cratebay-cli",
    "crates/cratebay-daemon",
    "crates/cratebay-core",
    "crates/cratebay-mcp",
    "crates/cratebay-vz",
    "crates/cratebay-gui/src-tauri",
]

# ── Release profile: optimise for small binary size ─────────────
[profile.release]
opt-level = "z"      # Optimise for binary size over speed
lto = true           # Full link-time optimisation across all crates
codegen-units = 1    # Single codegen unit → better inlining & dead-code removal
panic = "abort"      # No unwind tables → smaller binary
strip = true         # Strip debug symbols and metadata
