[package]
name = "cargobay-daemon"
version = "1.0.0"
edition = "2021"
description = "CargoBay daemon: VM lifecycle, gRPC server"

[[bin]]
name = "cargobay-daemon"
path = "src/main.rs"

[dependencies]
cargobay-core = { path = "../cargobay-core" }
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
tracing = "0.1"
tracing-subscriber = "0.3"
