[package]
name = "cargobay-vz"
version = "1.0.0"
edition = "2021"
rust-version = "1.77.2"
description = "Virtualization.framework bridge for CargoBay (macOS VM execution)"

[dependencies]
cargobay-core = { path = "../cargobay-core" }
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
