[package]
name = "cratebay-cli"
version = "0.7.0"
edition = "2021"
description = "CLI tool for CrateBay"

[[bin]]
name = "cratebay"
path = "src/main.rs"

[dependencies]
cratebay-core = { path = "../cratebay-core", features = ["download"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
bollard = "0.18"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
