[package]
name = "cratebay-core"
version = "0.8.0"
edition = "2021"
description = "Core library: hypervisor abstraction, VM management"

[features]
default = []
download = ["reqwest", "sha2", "futures-util"]

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tonic = "0.12"
prost = "0.13"
thiserror = "2"
tracing = "0.1"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.13.2", features = ["stream"], optional = true }
sha2 = { version = "0.10", optional = true }
futures-util = { version = "0.3", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
kvm-ioctls = "0.19"
kvm-bindings = { version = "0.10", features = ["fam-wrappers"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[build-dependencies]
tonic-build = "0.12"

[[bench]]
name = "startup"
harness = false
