[package]
name = "cratebay-vz"
version = "0.8.0"
edition = "2021"
rust-version = "1.77.2"
description = "Virtualization.framework bridge for CrateBay (macOS VM execution)"

[dependencies]
cratebay-core = { path = "../cratebay-core" }
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
