[package]
name = "cargobay-gui"
version = "0.1.0"
description = "A Tauri App"
authors = ["coder-hhx <houhaixu_email@163.com>"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cargobay_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
bollard = "0.18"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13.2", features = ["json"] }
futures-util = "0.3"
cargobay-core = { path = "../../cargobay-core" }
tonic = "0.12"
tracing = "0.1"
